examples/sdk/native/nclink_shim.h

NCLSHIM_API int nclshim_server_register_file_tool(const void *handle);
NCLSHIM_API int nclshim_server_start_ftp(const void *handle);
/**
 * 离线驱动一条请求：payload 是原始报文体（不必 NUL 结尾），返回应答报文的 JSON
 * 文本（malloc，调用方释放）。**不经过 MQTT**，也不发布应答 —— 单测与"自己当
 * 传输"的宿主用它。
 */
NCLSHIM_API int nclshim_server_dispatch(const void *handle, const char *topic,
                                        const void *payload, int payload_len,
                                        char **out_json);
NCLSHIM_API int nclshim_server_invoke_method_call(const void *handle,
                                                  const char *method,
                                                  const char *params_json,
                                                  char **out_json);
NCLSHIM_API int nclshim_server_check_method_call(const void *handle,
                                                 const char *method,
                                                 const char *params_json,
                                                 char **out_json);
/** 发起一次异步调用；应答里 code=OK + handler（方法在池里跑）。 */
NCLSHIM_API int nclshim_server_invoke_method_call_async(const void *handle,
                                                        const char *method,
                                                        const char *params_json,
                                                        char **out_json);
NCLSHIM_API int nclshim_server_invoke_method_status(const void *handle,
                                                    const char *object_id,
                                                    const char *handler,
                                                    char **out_json);
NCLSHIM_API int nclshim_server_invoke_method_result(const void *handle,
                                                    const char *object_id,
                                                    const char *handler,
                                                    char **out_json);
/** 异步方法调用上报进度（可选；不报就是 executing/stopped + process=0）。 */
NCLSHIM_API int nclshim_server_report_method_progress(const void *handle,
                                                      const char *handler,
                                                      long long process,
                                                      const char *status);
NCLSHIM_API int nclshim_server_init_samples(const void *handle);
/** 运行时加一个采样通道（config_json 是一个 SAMPLE_CHANNEL 配置节点）。 */
NCLSHIM_API int nclshim_server_add_sample(const void *handle, const char *config_json);
NCLSHIM_API int nclshim_server_remove_sample(const void *handle, const char *id);
NCLSHIM_API void nclshim_server_stop_all_samples(const void *handle);
/** 推一条事件到 Event/<sn>；event_json 形如 {"key":...,"value":...}。 */
NCLSHIM_API int nclshim_server_push_event(const void *handle, const char *event_id,
                                          const char *event_json);
NCLSHIM_API int nclshim_server_push_event_ex(const void *handle, const char *event_id,
                                             const char *event_json,
                                             long long time_ms,
                                             const char *message_id);
/**
 * 复制一份文本（malloc，调用方 nclshim_free）。**回调里回填字符串必须用它**：
 * 垫片随后会用自己这边的 free() 释放，托管侧自己 malloc/python bytes/GC 出来的
 * 内存不能这么用（跨 CRT / 跨分配器）。
 */
NCLSHIM_API char *nclshim_strdup(const char *text);
/**
 * 起一个 HTTP 端点：port=0 用随机端口（端口用 nclshim_http_port 查）。
 * server 非空时挂 REST（OpenAPI + swagger-ui + 工具端点）；with_config 非 0 再
 * 挂配置端点（SN/模型/驱动/mqtt.cfg/服务器列表）。失败返回 NULL。
 */
NCLSHIM_API const void *nclshim_http_start(unsigned port, const void *server,
                                           int with_config);
NCLSHIM_API void nclshim_http_free(const void *handle);
NCLSHIM_API int nclshim_http_port(const void *handle);
NCLSHIM_API int nclshim_http_request_count(const void *handle);
NCLSHIM_API void nclshim_http_set_cors(const void *handle, int enabled);
/** 挂一条自己的路由：method 支持 "*"（见 ncl_http_server_route 的匹配规则）。 */
NCLSHIM_API int nclshim_http_route(const void *handle, const char *method,
                                   const char *path, void *host);
/** 起进程级 FTP 端点（幂等；nclshim_open 也会起）。 */
NCLSHIM_API int nclshim_file_start_ftp(void);
/**
 * 同上，但可以换端口 / 根目录 / 账号：port=0、root/user/password 为 NULL 就是默认
 * （2323、安装根、admin / 123456）。托管侧与 broker 不在同一台机器、或者 2323 被占
 * 的时候用它。
 */
NCLSHIM_API int nclshim_file_start_ftp_ex(unsigned port, const char *root,
                                          const char *user, const char *password);
/**
 * 给设备端文件通道指定一个静态对端（不握手）。要求对端自己跑 FTP 服务端、目录布局
 * 是 "/<sn>/..."。host 必填；port=0 / user / password 为 NULL 用默认。对端用
 * nclshim_client_file_channel_open() 握手开的通道会顶替它。
 */
NCLSHIM_API int nclshim_server_set_file_peer(const void *handle, const char *host,
                                             unsigned port, const char *user,
                                             const char *password);
NCLSHIM_API void nclshim_file_stop_ftp(void);
/**
 * 开文件通道（file/openFileChannel）：把本进程的 FTP 端点交给设备，设备随即往那儿
 * 拨 FTP。通道是租约，关掉（..._channel_close()）之前一直是这条对端。
 *
 * 默认：地址 = 到 broker 的本机地址（拿不到就 127.0.0.1），端口 = 进程级端点端口
 * （没起就按 2323 起），账号 = 库临时生成的、只有设备知道的一对（关闭时撤销）。
 * 幂等：已经开着就直接返回 0。
 */
NCLSHIM_API int nclshim_client_file_channel_open(const void *client);
/**
 * 同上，但显式给出设备要拨的 host / port 和账号（host 必填，port 必填）。
 * 对端不在这台机器上、或者端口有映射时用它；user/password 指向的若是本进程端点，
 * 库会把账号加上并在关闭时撤销。
 */
NCLSHIM_API int nclshim_client_file_channel_open_ex(const void *client,
                                                    const char *host,
                                                    unsigned port,
                                                    const char *user,
                                                    const char *password);
/** 收回文件通道：file/closeFileChannel + 撤销库给这条通道加的账号（幂等）。 */
NCLSHIM_API int nclshim_client_file_channel_close(const void *client);
/** 这条客户端手上有没有文件通道（1/0）。 */
NCLSHIM_API int nclshim_client_file_channel_is_open(const void *client);
/**
 * 上传一个文件：local_file_path 是**相对路径**（形如 "/demo.txt"），文件必须在
 * <root>/<sn><相对路径> 上（与 C API 一致）。
 */
NCLSHIM_API int nclshim_client_file_write(const void *client,
                                          const char *local_file_path);
/** 下载一个文件；返回落盘后的本地绝对路径（malloc，调用方 nclshim_free）。 */
NCLSHIM_API char *nclshim_client_file_read(const void *client,
                                           const char *remote_file_path);
/** 列目录：返回属性数组的 JSON 文本（malloc）；失败返回 NULL。 */
NCLSHIM_API char *nclshim_client_file_ll_json(const void *client,
                                              const char *remote_dir);
NCLSHIM_API int nclshim_client_file_mkdir(const void *client, const char *remote_dir);
NCLSHIM_API int nclshim_client_file_delete(const void *client,
                                           const char *remote_file_path);
/**
 * 带文件参数的方法调用：keys_json / paths_json 是等长的字符串数组，params[keys[i]]
 * 会先换成 "/temp/<名字>"（文件从 paths_json[i] 经文件通道送过去），应答里
 * "fileKeys" 列出的键会被换成本地路径。应答 JSON 文本由调用方 nclshim_free。
 */
NCLSHIM_API int nclshim_client_method_call_file(const void *client,
                                                const char *method,
                                                const char *params_json,
                                                const char *keys_json,
                                                const char *paths_json,
                                                unsigned timeout_ms,
                                                char **out_json);
NCLSHIM_API int nclshim_file_need_compression(const char *file_name);
NCLSHIM_API int nclshim_file_total_chunks(long long size);
/** 文件内容的 SHA-256（小写十六进制，malloc；调用方 nclshim_free）。 */
NCLSHIM_API char *nclshim_file_checksum(const char *path);
/** 本地文件的属性（一个 JSON 对象；字段顺序按规范固定）：见 ncl_file_attribute_to_json。 */
NCLSHIM_API char *nclshim_file_attribute_json(const char *path, const char *parent);