dist/nclink-core-c-3.6.0/bindings/csharp/src/Nclink.Core/Native.cs


        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_register_file_tool")]
        internal static extern int ServerRegisterFileTool(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_start_ftp")]
        internal static extern int ServerStartFtp(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_dispatch")]
        internal static extern int ServerDispatch(IntPtr handle, byte[] topic, byte[] payload, int payloadLen, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_invoke_method_call")]
        internal static extern int ServerInvokeMethodCall(IntPtr handle, byte[] method, byte[] paramsJson, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_check_method_call")]
        internal static extern int ServerCheckMethodCall(IntPtr handle, byte[] method, byte[] paramsJson, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_invoke_method_call_async")]
        internal static extern int ServerInvokeMethodCallAsync(IntPtr handle, byte[] method, byte[] paramsJson, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_invoke_method_status")]
        internal static extern int ServerInvokeMethodStatus(IntPtr handle, byte[] objectId, byte[] handler, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_invoke_method_result")]
        internal static extern int ServerInvokeMethodResult(IntPtr handle, byte[] objectId, byte[] handler, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_report_method_progress")]
        internal static extern int ServerReportMethodProgress(IntPtr handle, byte[] handler, long process, byte[] status);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_init_samples")]
        internal static extern int ServerInitSamples(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_add_sample")]
        internal static extern int ServerAddSample(IntPtr handle, byte[] configJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_remove_sample")]
        internal static extern int ServerRemoveSample(IntPtr handle, byte[] id);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_stop_all_samples")]
        internal static extern void ServerStopAllSamples(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_push_event")]
        internal static extern int ServerPushEvent(IntPtr handle, byte[] eventId, byte[] eventJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_push_event_ex")]
        internal static extern int ServerPushEventEx(IntPtr handle, byte[] eventId, byte[] eventJson, long timeMs, byte[] messageId);

        /* -------------------------------------------------------------- http -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_start")]
        internal static extern IntPtr HttpStart(uint port, IntPtr server, int withConfig);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_free")]
        internal static extern void HttpFree(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_port")]
        internal static extern int HttpPort(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_request_count")]
        internal static extern int HttpRequestCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_set_cors")]
        internal static extern void HttpSetCors(IntPtr handle, int enabled);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_route")]
        internal static extern int HttpRoute(IntPtr handle, byte[] method, byte[] path, IntPtr host);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_strdup")]
        internal static extern IntPtr Strdup(byte[] text);

        /* -------------------------------------------------------------- file -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_start_ftp")]
        internal static extern int FileStartFtp();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_start_ftp_ex")]
        internal static extern int FileStartFtpEx(uint port, byte[] root, byte[] user, byte[] password);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_set_file_peer")]
        internal static extern int ServerSetFilePeer(IntPtr handle, byte[] host, uint port, byte[] user, byte[] password);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_stop_ftp")]
        internal static extern void FileStopFtp();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_channel_open")]
        internal static extern int ClientFileChannelOpen(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_channel_open_ex")]
        internal static extern int ClientFileChannelOpenEx(IntPtr client, byte[] host, uint port, byte[] user, byte[] password);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_channel_close")]
        internal static extern int ClientFileChannelClose(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_channel_is_open")]
        internal static extern int ClientFileChannelIsOpen(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_write")]
        internal static extern int ClientFileWrite(IntPtr client, byte[] localFilePath);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_read")]
        internal static extern IntPtr ClientFileRead(IntPtr client, byte[] remoteFilePath);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_ll_json")]
        internal static extern IntPtr ClientFileLlJson(IntPtr client, byte[] remoteDir);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_mkdir")]
        internal static extern int ClientFileMkdir(IntPtr client, byte[] remoteDir);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_file_delete")]
        internal static extern int ClientFileDelete(IntPtr client, byte[] remoteFilePath);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_method_call_file")]
        internal static extern int ClientMethodCallFile(IntPtr client, byte[] method, byte[] paramsJson, byte[] keysJson, byte[] pathsJson, uint timeoutMs, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_need_compression")]
        internal static extern int FileNeedCompression(byte[] fileName);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_total_chunks")]
        internal static extern int FileTotalChunks(long size);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_checksum")]
        internal static extern IntPtr FileChecksum(byte[] path);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_file_attribute_json")]
        internal static extern IntPtr FileAttributeJson(byte[] path, byte[] parent);

        /* ----------------------------------------------------------- helpers -- */

        /// <summary>空终止的 UTF-8 字节串 → string（原生返回 NULL 时得到 null）。</summary>
        internal static string Utf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero)
            {
                return null;
            }
            int length = 0;
            while (Marshal.ReadByte(ptr, length) != 0)
            {
                length++;
            }
            if (length == 0)
            {
                return string.Empty;
            }
            byte[] buffer = new byte[length];
            Marshal.Copy(ptr, buffer, 0, length);
            return Encoding.UTF8.GetString(buffer);
        }

        /// <summary>把托管字符串复制成"原生调用期间有效"的 UTF-8 字节串。</summary>
        internal static byte[] Utf8Z(string text)
        {
            if (text == null)
            {
                return null;
            }
            byte[] bytes = Encoding.UTF8.GetBytes(text);
            byte[] buffer = new byte[bytes.Length + 1];
            Array.Copy(bytes, buffer, bytes.Length);
            return buffer;
        }

        /// <summary>取走原生 malloc 出来的字符串并释放它。</summary>
        internal static string TakeUtf8(IntPtr ptr)
        {
            string text = Utf8(ptr);
            if (ptr != IntPtr.Zero)
            {
                Free(ptr);
            }
            return text;
        }
    }
}
